<resources>
    <string name="app_name">MineField</string>
    <string name="menu_home">Home</string>
    <string name="menu_game">Game</string>
    <string name="start_game">Start game</string>
    <string name="gimme_some_text">Gimme some text</string>
    <string name="remaining_time">Remaining time:</string>
    <string name="time_limit_in_s">Time limit:</string>
    <string name="mines_amount">Mines amount:</string>
    <string name="map_size">Map size:</string>
    <string name="settings">Settings</string>
    <string name="graphical_set">Graphical set</string>
    <string name="try_again">Try again</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="minefield">MINEFIELD</string>
</resources>
