<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment"
    android:background="@drawable/background"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:padding="10dp"
        android:background="@drawable/board_padding"
        >
        <TextView
            android:id="@+id/settings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textSize="40dp"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/map_size_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="162dp"
                android:layout_height="32dp"
                android:text="@string/map_size"
                android:textAlignment="textEnd"
                android:textSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/mapSize"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.461" />

            <EditText
                android:id="@+id/mapSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="52dp"
                android:ems="5"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mines_number_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/map_size_settings"
            android:layout_marginTop="35dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mines_amount"
                android:textSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/minesNumber"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.454" />

            <EditText
                android:id="@+id/minesNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="52dp"
                android:ems="5"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <fragment
            android:id="@+id/time_limit_settings"
            android:name="com.cherit.minefield.ui.settings.components.TimeLimitSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mines_number_settings"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:tag="Seekbar"
            tools:layout="@layout/time_limit_seekbar" />

        <fragment
            android:id="@+id/graphic_set_settings"
            android:name="com.cherit.minefield.ui.settings.components.GraphicSetRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time_limit_settings"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:tag="Radio"
            tools:layout="@layout/graphic_set_radio" />
    </RelativeLayout>


    <Button
        android:id="@+id/saveBtn"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:height="60dp"
        android:background="@drawable/button"
        android:text="@string/save"
        android:textSize="25dp" />

</RelativeLayout>